/**
 * This file is part of the "tsdb" project
 *   Copyright (c) 2015 Paul Asmuth, FnordCorp B.V.
 *
 * FnordMetric is free software: you can redistribute it and/or modify it under
 * the terms of the GNU General Public License v3.0. You should have received a
 * copy of the GNU General Public License along with this program. If not, see
 * <http://www.gnu.org/licenses/>.
 */
package zbase;

message LogPartitionCompactionState {

  /**
   * SHA1 sum (20 bytes) containing the uuid of the partition for which this
   * replication state was written. The uuid is used to prevent A/B/A scenarios
   * when a partition is created, deleted and recreated.  
   */
  required bytes uuid = 1;

  /**
   * Up to which offset have we indexed the partition
   */
  optional uint64 offset = 2;

};
